sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:5: error: not found: value ito
    for(j <- ito getNombreValeurs()-1){
             ^AlgSelectionSort:5: error: value - is not a member of Unit
    for(j <- ito getNombreValeurs()-1){
                                   ^