sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for(i<- 0  to getNombreValeurs()-1 ){
    var minpos= i
    for(j <- ito getNombreValeurs()-1){
      if(plusPetit(j,minpos)){
        minpos=j
      }
    }
    var temp=getValeur(i)
    copie(minpos,i)
    setValeur(minpos,temp)
  }
}